--- a/css/index.css
+++ b/css/index.css
@@ -147,7 +147,7 @@ color: #32DBC6;
 
 .titre {
 	position:relative; margin:150px auto 0 auto; width:90%;text-align:center;
-	font-family: 'NoNameYet-vo1-Scratchy'; src: url("../font/_NNY/NoNameYet-vo1-Scratchy.ttf"); color:#fff; font-size:10vw;
+	font-family: 'NoNameYet-vo1-Scratchy'; src: url("../font/NoNameYet-vo1-Scratchy.woff2"); color:#fff; font-size:10vw;
 	text-transform: uppercase;
 	
 }
