--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 @font-face { 
 	font-family: "No Name Yet - vo.1";
-	src: url("../font/NoNameYet-vo-1GX.ttf");
+	src: url("font/_NNY/NoNameYet-vo-1GX.ttf");
 }
 
 *{
