--- a/css/index.css
+++ b/css/index.css
@@ -34,6 +34,7 @@ body{
 	align-items: center;
 	font-size:30px;
 	font-family: 'OpenSans-SemiBold';
+	src: url("../font/OpenSans-SemiBold.ttf");
 }
 
 .left .handle span{
