--- a/css/index.css
+++ b/css/index.css
@@ -33,8 +33,8 @@ body{
 	justify-content: center;
 	align-items: center;
 	font-size:30px;
-	font-family: 'OpenSans-SemiBold';
-	src: url("../font/OpenSans-SemiBold.ttf");
+	font-family: "OpenSans-SemiBold";
+	src: url("font/OpenSans-SemiBold.ttf");
 }
 
 .left .handle span{
