--- a/Animation/03-sliding-text-effect/css/slide.css
+++ b/Animation/03-sliding-text-effect/css/slide.css
@@ -39,7 +39,7 @@
     }
     span {
       display: inline-block;
-      font-family: "No Name Yet - vo.1"; src: url("../font/NoNameYet-vo-1GX.ttf");
+      font-family: "No Name Yet - vo.1"; src: url("font/NoNameYet-vo-1GX.ttf");
       font-size: 10vw;
       text-transform: uppercase;
       line-height: .8;
@@ -48,7 +48,7 @@
     }
 
     #anim-regular {
-        font-family: 'NoNameYet-vo1-Regular'; src: url("../font/NoNameYet-vo1-Regular.ttf");
+        font-family: 'NoNameYet-vo1-Regular'; src: url("font/NoNameYet-vo1-Regular.ttf");
     }
      #anim-geometric {
         font-family: 'NoNameYet-vo1-Geometric'; src: url("../font/NoNameYet-vo1-Geometric.ttf");
