--- a/Animation/03-sliding-text-effect/css/slide.css
+++ b/Animation/03-sliding-text-effect/css/slide.css
@@ -39,7 +39,7 @@
     }
     span {
       display: inline-block;
-	font-family: "No Name Yet - vo.1"; src: url("font/NoNameYet-vo-1GX.ttf");
+      font-family: "NoNameYet-vo1GX";
       font-size: 10vw;
       text-transform: uppercase;
       line-height: .8;
@@ -48,14 +48,14 @@
     }
 
     #anim-regular {
-        font-family: 'NoNameYet-vo1-Regular'; src: url('NoNameYet-vo1-Regular.ttf') format('truetype');
+        font-family: 'NoNameYet-vo1-Regular';
     }
      #anim-geometric {
-        font-family: 'NoNameYet-vo1-Geometric'; src: url("font/NNY/NoNameYet-vo1-Geometric.ttf");
+        font-family: 'NoNameYet-vo1-Geometric';;
     }
      #anim-mimetic {
-        font-family: 'NoNameYet-vo1-Mimetic'; src: url("font/NNY/NoNameYet-vo1-Mimetic.ttf");
+        font-family: 'NoNameYet-vo1-Mimetic';
     }
      #anim-linear {
-        font-family: 'NoNameYet-vo1-Linear'; src: url("font/NNY/NoNameYet-vo1-Linear.ttf");
+        font-family: 'NoNameYet-vo1-Linear';
     }
