--- a/Animation/03-sliding-text-effect/css/style.css
+++ b/Animation/03-sliding-text-effect/css/style.css
@@ -39,7 +39,7 @@
     }
     span {
       display: inline-block;
-      font-family: "font/NoNameYet-vo-1GX.ttf";
+      font-family: "NoNameYet-vo-1GX.ttf";
       font-size: 10vw;
       text-transform: uppercase;
       line-height: .8;
