--- a/Animation/03-sliding-text-effect/css/slide.css
+++ b/Animation/03-sliding-text-effect/css/slide.css
@@ -39,6 +39,7 @@
     }
     span {
       display: inline-block;
+      font-family: "No Name Yet - vo.1"; src: url("font/NoNameYet-vo-1GX.ttf");
       font-size: 10vw;
       text-transform: uppercase;
       line-height: .8;
@@ -50,7 +51,7 @@
         font-family: 'NoNameYet-vo1-Regular';
     }
      #anim-geometric {
-        font-family: 'NoNameYet-vo1-Geometric';;
+        font-family: 'NoNameYet-vo1-Geometric';
     }
      #anim-mimetic {
         font-family: 'NoNameYet-vo1-Mimetic';
